			     BZFlag Release Notes
			     ====================

BZFlag 2.0.1
------------

* Fixed antikick so that it actually prevents most kicks - Sean Morrison
* ctf make restarting on base even when dead - Anonymous 
* Fixed weirdness on Console Panel when disabling chat display - Alfredo Tupone
* Fixed a segfault with SDL and no audio - Alfredo Tupone
* bzadmin wipes argv to hide possible password - Tim Riker
* Lagstats and Playerlist no longer filtered - Steve Krenzel
* print errors in red - Frank Thilo
* simple scroll indicator for control panel - Frank Thilo
* antiban perm actually counters a server ban now - Steve Krenzel

BZFlag 2.0.0  "Falcor's Despair" (2004-01-17)
---------------------------------------------

* Added a .desktop file - David Trowbridge
* Tool for converting obj to bzw - Jeff Myers
* Addition of converted ProFont font - Andrew Keyser
* Added a file syntax section to bzw.5 - Fred Cods
* Added a bzw.5 manpage to document world file format - Sean Morrison
* Added /quit command - Angelina Carlton
* Display player addr on join to admins - Sean Morrison
* Make -debug a public client option - Frank Thilo
* Communicate autopilot state, display in scoreboard - Frank Thilo
* Observer counts and match times added to game queries - David Vuorio
* Central authentication - Tim Riker
* Avoid transfer flag cheat - Alfredo Tupone
* Cheat client flag obfuscation and hiding - Alfredo Tupone
* Added strong authentication via Kerberos - Alfredo Tupone
* BZFlag renders frames and accepts commands during joining - Alfredo Tupone
* Lag is computed only after entering game - Alfredo Tupone
* CTF world used for FFA make bases into boxes - Alfredo Tupone
* Allow elevated bases even without -fb - Alfredo Tupone
* Added optional duration option to /countdown - Sean Morrison
* Added shot mismatch cheat auto-kicking - Julio Jimenez
* Improved double-jump response - Anonymous
* Added physics drivers - Anonymous
* Unlimited altimeter height - Steve Krenzel