@@ -81,6 +81,9 @@ class MainWindow {
     void		getJoyPosition(int& mx, int& my) const;
     unsigned long	getJoyButtonSet() const;
     void		getJoyDevices(std::vector<std::string> &list) const;
+    void		getJoyDeviceAxes(std::vector<std::string> &list) const;
+    void		setJoyXAxis(const std::string axis);
+    void		setJoyYAxis(const std::string axis);
     void		initJoystick(std::string &joystickName);
 
     bool		isInFault() { return faulting; };
