@@ -389,9 +389,6 @@ copy debug\*.pdb ..\..\*.pdb
 				RelativePath="..\..\src\bzflag\ForceFeedback.cxx">
 			</File>
 			<File
-				RelativePath="..\..\src\bzflag\LoginMenu.cxx">
-			</File>
-			<File
 				RelativePath="..\..\src\bzflag\MainWindow.cxx">
 				<FileConfiguration
 					Name="Debug|Win32">
@@ -1310,6 +1307,9 @@ copy debug\*.pdb ..\..\*.pdb
 				</File>
 				<File
 					RelativePath="..\..\src\bzflag\KeyboardMapMenu.cxx">
+				</File>
+				<File
+					RelativePath="..\..\src\bzflag\LoginMenu.cxx">
 				</File>
 				<File
 					RelativePath="..\..\src\bzflag\MainMenu.cxx">
